<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LayoutsExercise</string>
    <string name="red_label">Red</string>
    <string name="green_label">Green</string>
    <string name="blue_label">Blue</string>
    <string name="set_color_label">Set Color</string>
    <string name="clear_label">Clear</string>
    <string name="linear_layout_label">Linear</string>
    <string name="table_layout_label">Table</string>
    <string name="relative_layout_label">Relative</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
</resources>
