<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_choices"/>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <Button
            android:id="@+id/button1"
            android:text="@string/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button2"
            android:text="@string/button2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/button1"
            android:layout_alignLeft="@id/button1"
            android:layout_marginLeft="-50dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button3"
            android:text="@string/button3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/button1"
            android:layout_alignLeft="@id/button1"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button4"
            android:text="@string/button4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/button2"
            android:layout_alignLeft="@id/button2"
            android:layout_marginLeft="-50dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button5"
            android:text="@string/button5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/button3"
            android:layout_alignLeft="@id/button3"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</LinearLayout>